--- a/.github/workflows/document-workflow.yml
+++ b/.github/workflows/document-workflow.yml
@@ -15,7 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  checker:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -23,17 +23,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: lint-md-github-action
-      # You may pin to the exact commit or the version.
-      # uses: lint-md/github-action@c85852d6ed2623391ee4d027242d45c5c8afb86b
-        uses: lint-md/github-action@v0.1.1
-        with:
-          # Lint-md configuration file path.
-          configFile: .lintmdrc # optional, default is .lintmdrc
-        # Whether you want to fail on warnings or not.
-          failOnWarnings: false # optional, default is false
-        # You can pass in multiple directories to be checked, separated by spaces.
-          files: ./ # optional, default is ./
       
       - name: REUSE Compliance Check
       # You may pin to the exact commit or the version.
