--- a/.github/workflows/document-workflow.yml
+++ b/.github/workflows/document-workflow.yml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Kabir Akzaman <kaabirherococ@gmail.com>
+#
+# SPDX-License-Identifier: CC0-1.0
 
 name: Check markdown documents
 
